--- a/style.css
+++ b/style.css
@@ -13,11 +13,13 @@ body{
     align-items: center;
     height: 100vh;
     background-color: #000;
+    background-image: url(image.jpg);
+    background-size: cover;
 }
 
 .grid-container{
     text-align: center;
-    background-color: #171717;
+    background-color: rgba(23, 23, 23,.75);
     padding: 10px;
     border: 2px solid transparent;
     border-radius: 5%;
@@ -35,7 +37,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color: #211f1f;
+    background-color: rgba(31, 31, 31,.75);
     border: 2px solid transparent;
     border-radius: 10%;
     font-size: 14px;
@@ -71,7 +73,7 @@ body{
     width: 100%;
     background-color: #ddd;
     margin-top: 10px;
-    height: 30px; /* Adjust the height as needed */
+    height: 20px; /* Adjust the height as needed */
     border-radius: 5px;
     overflow: hidden;
 }
@@ -81,8 +83,8 @@ body{
     width: 100%;
     background-color: green;
     text-align: center;
-    line-height: 30px; /* Adjust to match the height */
+    line-height: 20px; /* Adjust to match the height */
     color: white;
     font-weight: bold;
-    transition: width 0.5s; /* Smooth transition */
+    transition: width 1.1s; /* Smooth transition */
 }
