--- a/style.css
+++ b/style.css
@@ -23,6 +23,9 @@ body{
     padding: 10px;
     border: 2px solid transparent;
     border-radius: 5%;
+    backdrop-filter: blur(20px);
+    box-shadow: 0 0 30px rgba(0, 0, 0, 0.5);
+        
 }
 
 .grid{
@@ -40,7 +43,7 @@ body{
     background-color: rgba(31, 31, 31,.75);
     border: 2px solid transparent;
     border-radius: 10%;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 600;
     cursor: pointer;
     user-select: none;
